--- a/src/App.css
+++ b/src/App.css
@@ -222,19 +222,7 @@ body::-webkit-scrollbar-thumb {
   row-gap: 2rem;
   column-gap: 2rem;
 }
-@media only screen and (max-width: 768px) {
-  .app-grid {
-    grid-template-columns: repeat(3, 1fr);
-    column-gap: 1rem;
-  }
-}
 
-@media only screen and (max-width: 540px) {
-  .app-grid {
-    grid-template-columns: repeat(2, 1fr);
-    column-gap: .9rem;
-  }
-}
 
 .apps-grid {
   cursor: pointer;
@@ -260,3 +248,80 @@ body::-webkit-scrollbar-thumb {
   flex-direction: column;
   row-gap: 18px;
 }
+
+.tab-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  column-gap: 30px;
+  padding: 20px 0;
+}
+
+.tabs {
+  border-radius: 30px;
+  color: #fff;
+  padding: 10px 14px;
+  cursor: pointer;
+  color: #000;
+  font-weight: bolder;
+  font-family: "Montserrat";
+  text-align: center;
+}
+
+
+
+.tabs.active {
+  background-color: rgb(0, 0, 128);
+  color: #fff;
+}
+
+.content-tabs .content {
+  margin: 0 auto;
+  text-align: center;
+}
+
+.content.active-content {
+  display: block;
+}
+
+.content {
+  display: none;
+}
+
+
+.grid-container button {
+  border: none;
+  outline: none;
+  background: none;
+}
+
+
+
+@media only screen and (max-width: 768px) {
+  .app-grid {
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 1rem;
+  }
+}
+
+@media only screen and (max-width: 540px) {
+  .app-grid {
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: .9rem;
+  }
+
+  .tabs {
+    padding: 6px 8px;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
