--- a/src/App.css
+++ b/src/App.css
@@ -271,7 +271,7 @@ body::-webkit-scrollbar-thumb {
 
 
 .tabs.active {
-  background-color: rgb(0, 0, 128);
+  background-color: #0d6efd;
   color: #fff;
 }
 
